--- a/m2/s1/g4/start2/frase.html
+++ b/m2/s1/g4/start2/frase.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="frase.css">
 	</head>
     <body>
+		
 		<main>
 			<div id="testoAlternato">
 				<p>
@@ -20,9 +21,9 @@
 					<br>
 					ed un pizzico di originalità
 					<span class="parole">
-						<i class="interface">interfacce web</i>
-						<i class="singlePage">single page app</i>
-						<i class="nativeApp">app native</i>
+						<i>interfacce web</i>
+						<i>single page app</i>
+						<i>app native</i>
 					</span>
 					<div class="word-container">
 						<span class="current-word">interfacce web</span>
