--- a/m2/s2/g3/FE-U2-S2-L2-Esercizio.html
+++ b/m2/s2/g3/FE-U2-S2-L2-Esercizio.html
@@ -141,10 +141,10 @@ EXTRAS
   </div>
 </nav>
 
-<div class="container bg-secondary p-5 rounded-2">
+<div class="container bg-info-subtle p-5 rounded-2">
     <div class="row">
-        <div class="col text-center">
-            <h1 class="bg-primary text-light">AGENZIA VIAGGIT</h1>
+        <div class="col text-center text-lg-start">
+            <h1 class="text-info fs-1">AGENZIA VIAGGIT</h1>
             <p class="fst-italic">Lorem ipsum dolor sit amet consectetur 
                 adipisicing elit. Ab dolorum vitae, omnis iste nam eveniet. N
                 isi ullam, blanditiis iste dignissimos officiis itaque molestias, 
@@ -154,6 +154,7 @@ EXTRAS
                 eveniet voluptatum quibusdam tempore optio suscipit numquam veritatis 
                 enim repudiandae sit similique!
             </p>
+            <hr>
             <button type="button" class="btn btn-primary px-5 fw-bold">Prenota ora!</button>
         </div>
     </div>
@@ -163,15 +164,15 @@ EXTRAS
     <h2 class="mt-5">Saldi</h2>
     <div class="row">
         <div class="row row-cols-sm-6 row-cols-md-4 row-cols-lg-3 d-md-flex mt-2 d-md-flex justify-content-center align-items-center">
-            <div class="card m-2" style="width: 18rem;">
-                <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top border-box-cover" alt="im1">
+            <div class="card m-2 px-0" style="width: 18rem;">
+                <img  src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top border-box-cover" alt="im1">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-              <div class="card m-2" style="width: 18rem;">
+              <div class="card m-2 px-0" style="width: 18rem;">
                 <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top" alt="img2">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -179,7 +180,7 @@ EXTRAS
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-              <div  class="card m-2" style="width: 18rem;">
+              <div  class="card m-2 px-0" style="width: 18rem;">
                 <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top" alt="img3">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -187,7 +188,7 @@ EXTRAS
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-              <div class="card d-lg-none m-2" style="width: 18rem; ">
+              <div class="card d-lg-none m-2 px-0" style="width: 18rem; ">
                 <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top" alt="img4">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -204,15 +205,15 @@ EXTRAS
     <h2 class="mt-5">Welcom Summer</h2>
     <div class="row">
         <div class="row row-cols-md-6 row-cols-lg-4 row-cols-xl-3 justify-content-center">
-            <div class="card m-2" style="width: 18rem;">
-                <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top border-box-cover" alt="im1">
+            <div class="card m-2 px-0" style="width: 18rem;">
+                <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top" alt="im1">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-              <div class="card m-2" style="width: 18rem;">
+              <div class="card m-2 px-0" style="width: 18rem;">
                 <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top" alt="img2">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -220,7 +221,7 @@ EXTRAS
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-              <div  class="card m-2" style="width: 18rem;">
+              <div  class="card m-2 px-0" style="width: 18rem;">
                 <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top" alt="img3">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -228,7 +229,7 @@ EXTRAS
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-              <div class="card m-2" style="width: 18rem; ">
+              <div class="card m-2 px-0" style="width: 18rem; ">
                 <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top" alt="img4">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
@@ -236,16 +237,16 @@ EXTRAS
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-              <div class="card m-2" style="width: 18rem; ">
-                <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top" alt="img4">
+              <div class="card m-2 px-0" style="width: 18rem; ">
+                <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top" alt="img5">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
-              <div class="card m-2" style="width: 18rem; ">
-                <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top" alt="img4">
+              <div class="card m-2 px-0" style="width: 18rem; ">
+                <img src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" class="card-img-top" alt="img6">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -257,20 +258,6 @@ EXTRAS
     </div>
 </div>
 
-
-<div class="container mr-1 pt-3">
-    <h2 class="mt-3 d-none d-md-flex flex-column">Offerta del giorno</h2>
-    <div class="row">
-        <div class="col d-none d-md-flex shadow">
-            <div class="w-66 p-1 shadow-2"><img class="rounded-2" src="https://media.istockphoto.com/id/544676786/it/foto/casablanca-moschea.jpg?s=612x612&w=0&k=20&c=PwndAam-lNcoHDHbopaGRiHUe-dUXzY8ujWa42jETT0=" alt=""> </div>
-            <div class="w-33 p-1 mx-1">
-                <h3 class="fs-1">MOROCCO TOUR</h3>
-                <P>15.01.2021-31.01.2021</P>
-                <button type="button" class="btn btn-dark">Best offer</button>
-            </div>
-        </div>
-    </div>
-</div>
 
 
 
