--- a/m2/s2/progetto settimanale/Netflix-assets/page.setting/index.html
+++ b/m2/s2/progetto settimanale/Netflix-assets/page.setting/index.html
@@ -23,7 +23,6 @@
     </footer>
 
     <main class="p-3 d-flex flex-column mt-4">
-
       <h2 class="text-light pb-2 text-center pt-5">Edit Profile</h2>
 
       <div class="container d-flex text-light justify-content-center mt-3">
@@ -49,7 +48,9 @@
 
             <div class="p-2 mb-3 mt-2 edit">
               <h4>Maturity Setting</h4>
-              <button class="bg-dark text-white mb-2">ALL MATURUTY RATINGS</button>
+              <button class="bg-dark text-white mb-2">
+                ALL MATURUTY RATINGS
+              </button>
               <p>Show titles of all maturity ratings for this profile.</p>
               <a class="bg-dark text-white" id="edit" href="#">EDIT</a>
             </div>
@@ -72,8 +73,6 @@
               </div>
             </div>
 
-            
-
             <div class="p-2 d-flex">
               <a class="text-black bg-white w-30 fw-bold btn" href="#">SAVE</a>
               <a class="fw-bold btn w-30" href="#">CANCEL</a>
@@ -81,13 +80,14 @@
             </div>
           </div>
         </div>
-        
       </div>
-      <hr class="text-light luca">
+      <hr class="text-light luca" />
     </main>
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
