--- a/m3/s1/g2/index.html
+++ b/m3/s1/g2/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
